examples/should_pass/assign-branch.anvil
proc top() {
    reg r : logic;
    loop {
        set r := (
            if 1'd0 { 1'b1 } else { 1'b0 }
        )
    }
}
