examples/should_fail/foreign-arg-use.anvil
chan ch = {
    left req: (logic@res),
    right res: (logic@req)
}

proc foo(ep : left ch) =
    loop {
        cycle 1
    }

proc test1(ep : left ch) =
    spawn foo(ep)
    reg x : logic
    loop{
        send ep.res(*x)=>
        set x := 1'b1;
        cycle 1
    }
